# muscribe

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  app.cpp  flagParser.cpp  flagParser.hpp
tests/app/: CMakeLists.txt  flagParserTest.cpp
